# etf-portfolio-analyzer

./: .gitignore  README.md  pyproject.toml
data/input/: targets.json
scripts/: analyze_countries.py  analyze_sectors.py
src/: __init__.py  portfolio.py
src/analyzers/: __init__.py  country_analyzer.py  sector_analyzer.py
src/scrapers/: __init__.py  base.py  country_scraper.py  sector_scraper.py
tests/: __init__.py  conftest.py  test_portfolio.py
